# puckworks

./: .gitignore  .mailmap  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  experimental-data-submission.yml  feature_request.yml
.github/scripts/: check_notebook_marker.py
.github/workflows/: codespaces-ci.yml  experience.yml  gates.yml  generated-artifacts.yml  guided-pull-batch.yml  live-contract.yml  notebook-smoke.yml  packaging.yml  pages.yml  paper3-evidence.yml  platform-smoke.yml  public-experience-review.yml  readme-governance.yml  release.yml  research-impact.yml  research-radar.yml  scientific-baseline.yml  security.yml  slow-science.yml  venue-deadline-review.yml
.streamlit/: config.toml
apps/: lab_app.py  lab_public_app.py  lab_ui_common.py
docs/: ACCESSIBILITY.md  ANALYSIS_P2.md  ANALYSIS_cv_residual.md  ANALYSIS_transfer.md  API.md  CI_LANES.md  CLAIM_OWNERSHIP.md  CORPUS_ANALYSIS_PLAN.md  CURRENT.md  DEPLOYMENT.md  EXPERIMENTAL_DATA_NEEDS.md  GUIDED_ESPRESSO_PULL.md  GUIDED_PULL_LABORATORY.md  HANDOFF_DELIVERY_README_2026-07-13.md  HANDOFF_EXECUTION_SUMMARY_2026-07-13.md  HANDOFF_TB_PI_VENUE.md  ILLUSTRATIVE_LINKED_PULL.md  ONBOARDING.md  P3_hypotheses.md  PAGES_FEASIBILITY.md  PAPER_3_PUCKWORKS_DRAFT.md  PAPER_A_DRAFT.md  PAPER_A_DRAFT_detailed_review.md  PAPER_A_FOURTH_DETAILED_REVIEW.md  PAPER_A_M9_external_dataset_and_decisions_handoff.md  PAPER_A_UPDATED_DETAILED_REVIEW.md  PAPER_B2_TEMPORAL_DRAFT.md  PAPER_B2_TEMPORAL_OUTLINE.md  PAPER_B_CURRENT_DETAILED_REVIEW.md  PAPER_B_DETAILED_REVIEW.md  PAPER_B_DRAFT.md  PAPER_B_DRAFT_detailed_review.md  PAPER_B_DRAFT_updated_detailed_review.md  PAPER_B_FIFTH_DETAILED_REVIEW.md  PAPER_B_RELATED_WORK.md  PAPER_B_SIXTH_DETAILED_REVIEW.md  PAPER_B_UPDATED_DETAILED_REVIEW.md  PAPER_OUTLINE.md  PROTOCOL_kappa_t_discrimination.md  PUBLICATION_STRATEGY_REVIEW.md  (+18 more)
docs/acceptance/: COLAB_PREFLIGHT_2026-07-21.md
docs/analysis/: COMPONENT_RESPONSE_ATLAS_SPEC.md  PRESSURE_ATLAS_SPEC.md  SANCTIONED_EXPORT_SPEC.md  VISUALIZER_EXPORT_READINESS.md
docs/archive/: README.md
docs/cards/: TEMPLATE.md  abedi2025.md  andueza2007.md  angeloni2023.md  apiletti2020.md  bakeer2025.md  baristahustle2024.md  barletta2025.md  boulle2026.md  brewer2026_coupled_kappa_t.md  bruno2026.md  cameron2020.md  cameron2020_si.md  champion2025.md  cooper2021.md  cunha2017.md  dandachi2025.md  egidi2018.md  egidi2024.md  ellero2019.md  fasano2000_partI.md  fasano2000_partII.md  fasano2000_partIII.md  folmer2017.md  foster2025.md  foster2025_2.md  g10_liquor_rheology.md  g1_glassbead_analog.md  g1_retention_search_target.md  g3_pump_characteristic.md  gagne2021.md  grudeva2025.md  grudeva2026_2.md  hargarten2020.md  hendon2020.md  huang2016.md  icms2016.md  illy2002.md  khamitova2020.md  khomyakov2020.md  (+42 more)
docs/data_intake/: ANGELONI_TRANSCRIPTION_AUDIT.md  REPLICATE_UNCERTAINTY_INTAKE.md
docs/data_requests/: experimental_campaign_schema.md  experimental_campaigns.yml  external_fraction_schema.md  kuhn2017_request.md  vaca_guerra2024_request.md
docs/figures/: PAPER_A_CAPTIONS.md  PAPER_B_CAPTIONS.md  README.md  fig2_evidence_dictionary.md  paper_b_results.json
docs/future/: PAPER_4_SPATIAL_CONTROL_NOTE.md
docs/journal/: JFE_SUBMISSION_CHECKLIST.md
docs/literature_search/: DOI_VERIFICATION_2026-07-13.md  EVIDENCE_MATRIX.csv  EVIDENCE_MATRIX_OPEN_WEB_SEED.csv  NOVELTY_WORDING_PROVISIONAL.md  OPEN_WEB_VERIFICATION_LOG.csv  README.md  SEARCH_PROTOCOL.md  references.bib
docs/paper1_resource/: PAPER_1_DETAILED_REVIEW-20260724.md  PAPER_1_REVIEW_ACTION_PLAN.md  PAPER_A_TABLE7_UNITS_AUDIT.md
docs/paper3_resource/: EVIDENCE_GRAPH.md  PAPER_3_PUCKWORKS_OUTLINE.md
docs/planning/: EXPLANATION_BUNDLE_VERTICAL_SLICE.md  NEXT_STEP_PLAN_2026-07-16.md  PRODUCT_FIRST_REPRIORITIZATION.md  STATE_OF_TRUTH.md
docs/public/: README.md  VISUALIZER_MEASUREMENT_AND_EVIDENCE_GUIDE.md
docs/reproducibility/: PAPER_A_RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  RELEASE_VERIFICATION_v0.2.0.md  RELEASE_VERIFICATION_v0.3.0.md  VALIDATION_REPORT_2026-07-13.md  paper_a_manifest.json  paper_b_manifest.json  (+1 more)
notebooks/: espresso_lb_colab.ipynb  guided_espresso_pull_colab.ipynb  guided_pull_laboratory_colab.ipynb  illustrative_linked_pull_colab.ipynb  puckworks_quickstart_colab.ipynb
puckworks/: __init__.py  contracts.py  figures.py  figures_paper_a.py  gate_runner.py  harness.py  inventory.py  registry.py  release.py  rights.py  statusdoc.py  validate.py
tests/: conftest.py  test_analysis.py  test_analysis_autopsy.py  test_authorship_identity.py  test_ci_lanes.py  test_corpus_export.py  test_corpus_freeze.py  test_data_loaders.py  test_data_privacy.py  test_doc_consistency.py  test_docs_integrity.py  test_evidence_graph.py  test_experimental_data_needs.py  test_experimental_protocol_pack.py  test_export_readiness.py  test_figure_exports.py  test_flat_valley.py  test_gagne2021_resistance.py  test_gate_runner.py  test_gates.py  test_guided_pull_lab.py  test_harness.py  test_inventory_contracts.py  test_lab_adapter_audit.py  test_lab_adapter_execution.py  test_lab_app.py  test_lab_artifact_replay.py  test_lab_catalog.py  test_lab_colab_notebook.py  test_lab_component_checks.py  test_lab_component_stories.py  test_lab_explorer.py  test_lab_lb_public_artifact.py  test_lab_lb_reference_runner.py  test_lab_public_app.py  test_lab_request_integrity.py  test_lab_rights_gate.py  test_lab_runner_authority.py  test_lab_runner_contract.py  test_lab_runners.py  (+77 more)
tools/: check_release_environment.py  experimental_data_needs.py  lab_batch.py  packaging_check.py  paper_a_consistency.py  prepare_paper_release.py  readme_governance.py  release_record.py  research_impact.py  research_radar.py  research_radar_issue.py  update_readme_pulse.py  validate_replicate_uncertainty.py  validate_submission_limits.py
(+420 files in other folders)
