[project]
name = "puckworks"
version = "0.2.0"
description = "Component registry for espresso process models: contracts, provenance, validation gates"
readme = "README.md"
license = {file = "LICENSE"}
# Supported Python: 3.10 (oldest) .. 3.13 (newest); 3.12 is the primary/release interpreter.
# All three are exercised in the quick-pr CI matrix.
requires-python = ">=3.10"
# Minimum bounds justified by the APIs actually used: numpy>=2.0 (the code calls np.trapezoid,
# which replaced np.trapz in numpy 2.0 — see models/fasano2000_partI, models/romancorrochano2017),
# scipy>=1.13 (first scipy with numpy-2.0 support). No upper caps — added only if a concrete
# incompatibility appears. The min-deps CI lane proves these floors on Python 3.10.
dependencies = ["numpy>=2.0", "scipy>=1.13"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
lb = ["taichi"]
dev = ["pytest", "ruff", "pytest-cov", "mypy"]   # coverage + type-check baselines (P1.3)
figures = ["matplotlib"]
harvest = ["requests"]
release = ["build", "twine", "pip-tools"]   # pip-tools: fully-resolved hashed lock (P0.5)
viz = ["matplotlib", "pillow", "imageio"]
viz3d = ["pyvista", "vtk"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# R9: lightweight first. Enforce pyflakes (real errors: unused imports, redefinitions,
# undefined names, bad f-strings) now; F841 (unused locals — some are intentional scaffolding
# in scientific code) is a documented follow-up before strengthening the ruleset.
select = ["F"]
ignore = ["F841"]

[tool.pytest.ini_options]
# WP5: CI lanes select DIFFERENT marked sets (quick-pr excludes these; slow-science runs slow).
markers = [
    "slow: science-heavy test (>~2 s); excluded from quick-pr, run by slow-science",
    "live: hits a live external service (bounded, secret-gated); never in quick-pr",
    "release: release-build / archive verification",
    "gpu: needs a GPU / taichi",
    "external_data: needs non-redistributable external data",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["puckworks*"]

[tool.setuptools.package-data]
puckworks = ["data/*.csv", "data/*.json"]
"puckworks.data" = ["*.csv", "*.json", "*.md", "**/*.csv", "**/*.json", "**/*.md"]

[tool.mypy]
# P1.3 quality ratchet, Stage 1: type-check the core public/release/control modules only.
# Lenient (no strict, no disallow-untyped) — the scientific numerical internals join later stages.
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"          # do not fail on non-target modules pulled in transitively
warn_unused_ignores = true
files = [
    "puckworks/contracts.py",
    "puckworks/registry.py",
    "puckworks/gate_runner.py",
    "puckworks/statusdoc.py",
    "puckworks/validate.py",
    "puckworks/release.py",
    "puckworks/paper3/archive.py",
    "puckworks/paper3/evidence_graph.py",
    "puckworks/paper3/build.py",
]
