[project]
name = "puckworks"
version = "0.4.0.dev0"
description = "Evidence-first espresso process modeling: papers become typed components, components face validation gates, and every conclusion retains its limits"
readme = "README.md"
license = {file = "LICENSE"}
# Supported Python: 3.10 (oldest) .. 3.13 (newest); 3.12 is the primary/release interpreter.
# All three are exercised in the quick-pr CI matrix.
requires-python = ">=3.10"
# Minimum bounds justified by the APIs actually used: numpy>=2.0 (the code calls np.trapezoid,
# which replaced np.trapz in numpy 2.0 — see models/fasano2000_partI, models/romancorrochano2017),
# scipy>=1.13 (first scipy with numpy-2.0 support). No upper caps — added only if a concrete
# incompatibility appears. The min-deps CI lane proves these floors on Python 3.10.
dependencies = ["numpy>=2.0", "scipy>=1.13"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
puckworks-pull = "puckworks.product._pull_cli:main"

[project.optional-dependencies]
lb = ["taichi"]
radar = ["pyyaml"]   # research-radar query-config parsing (tools/research_radar.py); not a core dep
dev = ["pytest", "ruff", "pytest-cov", "mypy", "pyyaml"]   # coverage + type-check baselines (P1.3); pyyaml for radar tests
figures = ["matplotlib"]
harvest = ["requests"]
release = ["build", "twine", "pip-tools"]   # pip-tools: fully-resolved hashed lock (P0.5)
viz = ["matplotlib", "pillow", "imageio"]
viz3d = ["pyvista", "vtk"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# R9: lightweight first. Enforce pyflakes (real errors: unused imports, redefinitions,
# undefined names, bad f-strings) now; F841 (unused locals — some are intentional scaffolding
# in scientific code) is a documented follow-up before strengthening the ruleset.
select = ["F"]
ignore = ["F841"]

[tool.pytest.ini_options]
# WP5: CI lanes select DIFFERENT marked sets (quick-pr excludes these; slow-science runs slow).
markers = [
    "slow: science-heavy test (>~2 s); excluded from quick-pr, run by slow-science",
    "live: hits a live external service (bounded, secret-gated); never in quick-pr",
    "release: release-build / archive verification",
    "gpu: needs a GPU / taichi",
    "external_data: needs non-redistributable external data",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["puckworks*"]

[tool.setuptools.package-data]
puckworks = ["data/*.csv", "data/*.json"]
"puckworks.data" = ["*.csv", "*.json", "*.md", "**/*.csv", "**/*.json", "**/*.md"]
# PV-03 flat-valley public snapshot: an EXACT path (not a broad wildcard), so the PV-03 claim
# producer can read the hash-bound values from an installed wheel.
"puckworks.public" = ["data/pv03_flat_valley.json", "data/pv05_model_composition.json"]

[tool.setuptools.exclude-package-data]
# NEVER ship gitignored/raw source data (P1.4 / privacy). The broad **/*.csv include above would
# otherwise sweep any such file present on a developer's disk into the wheel/sdist. Only the
# git-tracked, card-derived summaries + PROVENANCE.md documentation are meant to ship. A build-time
# guard (tools/packaging_check.py::check_git_tracked) fails if any UNTRACKED puckworks/ file ships.
"puckworks.data" = [
    "visualizer/raw/*", "visualizer/raw/**/*",
    "visualizer/normalized_v3/*", "visualizer/normalized_v3/**/*",
    "visualizer/crawl_*/*", "visualizer/crawl_*/**/*",
    "visualizer/aggregate_stats.csv", "visualizer/*.log",
    # pocketscience2024 raw workbook CSV exports ("Espresso water flow experiment - *.csv") are
    # gitignored and must never ship. They CANNOT be excluded here: setuptools splits
    # exclude-package-data patterns on whitespace, and these filenames contain spaces. The general
    # backstop is tools/packaging_check.py::check_git_tracked (a build fails if ANY untracked
    # puckworks/ file ships) plus building the release from a clean tree where they are absent.
]

[tool.mypy]
# P1.3 quality ratchet, Stage 1: type-check the core public/release/control modules only.
# Lenient (no strict, no disallow-untyped) — the scientific numerical internals join later stages.
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"          # do not fail on non-target modules pulled in transitively
warn_unused_ignores = true
files = [
    "puckworks/contracts.py",
    "puckworks/registry.py",
    "puckworks/gate_runner.py",
    "puckworks/statusdoc.py",
    "puckworks/validate.py",
    "puckworks/release.py",
    "puckworks/paper3/archive.py",
    "puckworks/paper3/evidence_graph.py",
    "puckworks/paper3/build.py",
    "puckworks/product/_enums.py",
    "puckworks/product/_records.py",
    "puckworks/product/_serialize.py",
    "puckworks/product/_provenance.py",
    "puckworks/product/_normalize.py",
    "puckworks/product/_pull.py",
    "puckworks/product/_pull_cli.py",
    "puckworks/product/__init__.py",
    "puckworks/viz/pull_report.py",
    "puckworks/public/flat_valley.py",
]
